fixes to spacing

--- a/style.css
+++ b/style.css
@@ -32,10 +32,6 @@ body {
     margin-bottom: 50px;
     margin-left: 30px;
     padding: 30px;
-}
-
-
-.viz_box {
     height: max-content;
 }
 
@@ -73,6 +69,11 @@ body {
         width: 80%;
     }
 
+    img {
+        width: 300px;
+    }
+
+
     .navbar {
         background-color: rgb(211, 206, 206);
     }
@@ -83,6 +84,8 @@ body {
 
     .preview {
         width: 80px;
+        margin-left: 0px;
+        margin-right: 0px;
     }
 
     .page-hold {
@@ -97,6 +100,7 @@ body {
 
     .box-styling {
         height: max-content;
+        margin-left: 0%;
     }
 
     .col-lg-6 {
